# cudaq_workshops

./: .gitmodules  LICENSE  Project_Ideas.ipynb  README.md  VQE.ipynb  cudaq_basics.ipynb  noisy_simulations.ipynb
demos/: TARGETS.md
demos/async/: async2.py  simple_async.py
demos/batch_scripts/: batch_cpp_nvidia-mqpu.sh  batch_cpp_nvidia.sh  batch_py_nvidia-mqpu.sh  batch_py_nvidia.sh
demos/compiler/custom_pass/: CMakeLists.txt  MyCustomPass.cpp
demos/dynamic-circuits/: cccx_short_depth.cpp  cccx_short_depth.py
demos/misc/: hybrid_qnns.ipynb  qaoa_maxcut.ipynb  vqe_chem_h2.ipynb
demos/multi-gpu/: ghz_state.cpp
demos/multi-qpu/: distribute_hamiltonian.py  multi_qpu_mpi.cpp  observe_mpi.py
demos/noise-modeling/: noise-model.cpp
demos/observe_n/: observe_n.py
demos/qpu-integration/: quantinuum.cpp  test.json
demos/single-gpu/: chem_LiH.py  ghz_state.cpp  observe_lih.cpp
demos/target-info/: Backends.ipynb  print_targets.py
demos/test/: ghz_3q.cpp
